<?xml version="1.0"?>
<package>
  <name>multiple_quadrilateral_corner_detection</name>
  <version>1.0.0</version>
  <description>Multi-quadrilateral corner detection function package</description>
  <maintainer email="153415292@qq.com">yw</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>registration</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>registration</run_depend>
  <run_depend>cv_bridge</run_depend>

  
  <export>
  </export>
</package>
